fix scrollbar

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -131,4 +131,13 @@
     font-weight: 300;
   }
 
+  .scrollbar-hide {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none;
+  }
+
 }
